change token from headers to query
