# swagger/doc/swagger.yaml
@@ -2,7 +2,7 @@
 swagger: "2.0"
 info:
   description: "Interface of Recruit system"
-  version: "0.1.0"
+  version: "0.1.1"
   title: "Recruit system"
   contact:
     name: "dawei"
@@ -144,8 +144,6 @@ paths:
          $ref: "#/responses/Standard400ErrorResponse"
         500:
          $ref: "#/responses/Standard500ErrorResponse"
-      security:
-      - token: []
 #业务接口
   /recruitlist:
     post:
@@ -524,8 +522,8 @@ paths:
 securityDefinitions:
   token:
     type: "apiKey"
-    name: "authorization"
-    in: "header"
+    name: "token"
+    in: "query"
 
 definitions:
   lang:
